Bug 311032 - When using eth usb dongle a phantom entry appears
Summary: When using eth usb dongle a phantom entry appears
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: Plasma Widget (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Kügler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-02 16:27 UTC by Kai Uwe Broulik
Modified: 2013-01-02 17:41 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.0.7
Sentry Crash Report:


Attachments
Phantom entry (70.38 KB, image/png)
2012-12-02 16:27 UTC, Kai Uwe Broulik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2012-12-02 16:27:12 UTC
[Using recent git]
My new Ultrabook doesn't have an builtin Ethernet connection, so I use an USB dongle for that purpose. Since there was no eth0 available on installation, I didn't get an Auto eth0 connection, so I created my own "Asus Ethernet Adapter" ethernet connection. When I plug the dongle, I get a phantom entry inside the network management plasmoid. See screenshot.

Reproducible: Always
Comment 1 Kai Uwe Broulik 2012-12-02 16:27:35 UTC
Created attachment 75590 [details]
Phantom entry
Comment 2 Lamarque V. Souza 2013-01-02 17:37:47 UTC
Git commit 9ba42b676d5fc7542b11ec643678845b46fab960 by Lamarque V. Souza.
Committed on 02/01/2013 at 18:36.
Pushed by lvsouza into branch 'master'.

Ignore connections with empty settings.
FIXED-IN: 0.9.0.7

M  +10   -1    backends/NetworkManager/nmdbussettingsconnectionprovider.cpp

http://commits.kde.org/networkmanagement/9ba42b676d5fc7542b11ec643678845b46fab960
Comment 3 Lamarque V. Souza 2013-01-02 17:41:35 UTC
Git commit 2bd1fd99fb3bee7deb7d25a86d81df943a1c7a9a by Lamarque V. Souza.
Committed on 02/01/2013 at 18:36.
Pushed by lvsouza into branch 'nm09'.

Ignore connections with empty settings.
FIXED-IN: 0.9.0.7
(cherry picked from commit 9ba42b676d5fc7542b11ec643678845b46fab960)

M  +10   -1    backends/NetworkManager/nmdbussettingsconnectionprovider.cpp

http://commits.kde.org/networkmanagement/2bd1fd99fb3bee7deb7d25a86d81df943a1c7a9a