Ignore connections with empty settings.

BUG: 311032
FIXED-IN: 0.9.0.7